<resources>
    <string name="app_name">NoQueue</string>
    <string name="registrationText">Per favore effettuare la registrazione</string>
    <string name="welcomeText">Benvenuto su NoQueue</string>
    <string name="registrationButton">Registrati</string>
    <string name="textName">Nome</string>
    <string name="textSurname">Cognome</string>
    <string name="errorlogin">C\'è stato un problema con la registrazione</string>
    <string name="inforequire">Inserisci tutti i campi</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="alreadySigned">Sei già registrato? Clicca qui</string>
    <string name="signupText">Per favore effettuare il Log In</string>
    <string name="benvenuti">Benvenuti!</string>
    <string name="selsorgente">Seleziona la sorgente</string>
    <string name="prenotazioni">Prenotazioni</string>
    <string name="profile">Profilo</string>
    <string name="add">Aggiungi una nuova prenotazione</string>
    <string name="city">Città:</string>
    <string name="market">Negozio:</string>
    <string name="orario">Orario di arrivo:</string>
    <string name="durata">Durata:</string>
    <string name="scegli_data">Scegli la data</string>
    <string name="cancellazioneEseguita">Cancellazione Eseguita</string>

    <string-array name="cities">
        <item>Camerano</item>
        <item>CupraMontana</item>
    </string-array>

    <string-array name="marketCamerano">
        <item>Si con te - Via Fazioli</item>
        <item>Si con te - Via Loretana</item>
        <item>Supermercato Coal - San Germano</item>
        <item>Ipermercato Carrefour</item>
    </string-array>

    <string-array name="marketCupra">
        <item>Si con te - Cavalletti Michele</item>
        <item>Supermercato Coal - Via C. Battisti</item>
        <item>Alimentari Mauro</item>
    </string-array>

    <string-array name="durata">
        <item>Breve (max 15min)</item>
        <item>Media (15–30min)</item>
        <item>Lunga (30+ min)</item>
    </string-array>

    <string-array name="hours">
        <item>8</item>
        <item>9</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string-array name="minutes">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>

    <string name="title_activity_maps">Map</string>
    <string name="login">Login</string>
    <string name="gotoregister">Non hai un account? Clicca qui</string>


</resources>
